# ai-chatbot

./: .gitignore  CMakeLists.txt  Instructions_MSYS2.md  README.md  main.c  meal_data.json  recipe_utils.c  recipe_utils.h
neurochef/: .gitignore  CMakeLists.txt  Makefile  README.md  __init__.py  hello.py  logic.py  main.c  meal_data.json  pyproject.toml  test_script.py
neurochef/neurochef/: logic.py
neurochef/tests/: test_logic.py
tests/: __init__.py  test_logic.py
